# SmartGridSimulator

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  requirements.txt
docs/html/: annotated.html  annotated_dup.js  class_battery-members.html  class_battery.html  class_battery.js  class_energy_consumer-members.html  class_energy_consumer.html  class_energy_consumer.js  class_energy_producer-members.html  class_energy_producer.html  class_energy_producer.js  class_smart_grid-members.html  class_smart_grid.html  class_smart_grid.js  classes.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d212b58fcdbee9408934e0531d2fa44e.html  dir_d3e1e162fbe9ab886bdaa43698db6910.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  index.html  md__l_i_c_e_n_s_e.html  md__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  pages.html  smart__grid_8h_source.html  struct_json_string-members.html  struct_json_string.html
docs/latex/: annotated.tex  class_battery.tex  class_energy_consumer.tex  class_energy_producer.tex  class_smart_grid.tex  files.tex  md__l_i_c_e_n_s_e.tex  md__r_e_a_d_m_e.tex  refman.tex  smart__grid_8h_source.tex  struct_json_string.tex
include/: smart_grid.h
python/: app.py  data_generator.py  grid_simulator.py  simulator_gui.py  test_grid_simulator.py
python/simulator_ui/: generator_ui.py  results_ui.py  setting_ui.py  setup_ui.py  (+1 more)
src/: smart_grid.cpp
(+34 files in other folders)
